--- a/result/2022-01-12.md
+++ b/result/2022-01-12.md
@@ -10,8 +10,8 @@
 10. [刘诗诗说玲娜贝儿可爱](https://s.weibo.com//weibo?q=%23%E5%88%98%E8%AF%97%E8%AF%97%E8%AF%B4%E7%8E%B2%E5%A8%9C%E8%B4%9D%E5%84%BF%E5%8F%AF%E7%88%B1%23&Refer=top) 664534
 11. [不建议盲目等待九价HPV疫苗](https://s.weibo.com//weibo?q=%23%E4%B8%8D%E5%BB%BA%E8%AE%AE%E7%9B%B2%E7%9B%AE%E7%AD%89%E5%BE%85%E4%B9%9D%E4%BB%B7HPV%E7%96%AB%E8%8B%97%23&Refer=top) 566062
 12. [江歌妈妈为起诉刘鑫花费120万](https://s.weibo.com//weibo?q=%23%E6%B1%9F%E6%AD%8C%E5%A6%88%E5%A6%88%E4%B8%BA%E8%B5%B7%E8%AF%89%E5%88%98%E9%91%AB%E8%8A%B1%E8%B4%B9120%E4%B8%87%23&Refer=top) 550694
-13. [美国少女家中产子后驾车丢进垃圾桶](https://s.weibo.com//weibo?q=%23%E7%BE%8E%E5%9B%BD%E5%B0%91%E5%A5%B3%E5%AE%B6%E4%B8%AD%E4%BA%A7%E5%AD%90%E5%90%8E%E9%A9%BE%E8%BD%A6%E4%B8%A2%E8%BF%9B%E5%9E%83%E5%9C%BE%E6%A1%B6%23&Refer=top) 421817
-14. [上海疫情](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E7%96%AB%E6%83%85%23&Refer=top) 401893
+13. [上海疫情](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E7%96%AB%E6%83%85%23&Refer=top) 460021
+14. [美国少女家中产子后驾车丢进垃圾桶](https://s.weibo.com//weibo?q=%23%E7%BE%8E%E5%9B%BD%E5%B0%91%E5%A5%B3%E5%AE%B6%E4%B8%AD%E4%BA%A7%E5%AD%90%E5%90%8E%E9%A9%BE%E8%BD%A6%E4%B8%A2%E8%BF%9B%E5%9E%83%E5%9C%BE%E6%A1%B6%23&Refer=top) 421817
 15. [混血后代的颜值有多高](https://s.weibo.com//weibo?q=%23%E6%B7%B7%E8%A1%80%E5%90%8E%E4%BB%A3%E7%9A%84%E9%A2%9C%E5%80%BC%E6%9C%89%E5%A4%9A%E9%AB%98%23&Refer=top) 349201
 16. [江歌今年30岁了](https://s.weibo.com//weibo?q=%23%E6%B1%9F%E6%AD%8C%E4%BB%8A%E5%B9%B430%E5%B2%81%E4%BA%86%23&Refer=top) 303211
 17. [立陶宛承认中立关系恶化对立影响很大](https://s.weibo.com//weibo?q=%23%E7%AB%8B%E9%99%B6%E5%AE%9B%E6%89%BF%E8%AE%A4%E4%B8%AD%E7%AB%8B%E5%85%B3%E7%B3%BB%E6%81%B6%E5%8C%96%E5%AF%B9%E7%AB%8B%E5%BD%B1%E5%93%8D%E5%BE%88%E5%A4%A7%23&Refer=top) 291986
@@ -26,24 +26,25 @@
 26. [医护支援西安入户采样偶遇家人](https://s.weibo.com//weibo?q=%23%E5%8C%BB%E6%8A%A4%E6%94%AF%E6%8F%B4%E8%A5%BF%E5%AE%89%E5%85%A5%E6%88%B7%E9%87%87%E6%A0%B7%E5%81%B6%E9%81%87%E5%AE%B6%E4%BA%BA%23&Refer=top) 212667
 27. [事发前刘鑫阻止江歌报警](https://s.weibo.com//weibo?q=%23%E4%BA%8B%E5%8F%91%E5%89%8D%E5%88%98%E9%91%AB%E9%98%BB%E6%AD%A2%E6%B1%9F%E6%AD%8C%E6%8A%A5%E8%AD%A6%23&Refer=top) 209724
 28. [感染奥密克戎症状有何不同](https://s.weibo.com//weibo?q=%23%E6%84%9F%E6%9F%93%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%E7%97%87%E7%8A%B6%E6%9C%89%E4%BD%95%E4%B8%8D%E5%90%8C%23&Refer=top) 203594
-29. [旅游博主亵渎烈士墓案终审维持原判](https://s.weibo.com//weibo?q=%23%E6%97%85%E6%B8%B8%E5%8D%9A%E4%B8%BB%E4%BA%B5%E6%B8%8E%E7%83%88%E5%A3%AB%E5%A2%93%E6%A1%88%E7%BB%88%E5%AE%A1%E7%BB%B4%E6%8C%81%E5%8E%9F%E5%88%A4%23&Refer=top) 192060
-30. [双减后的第一个期末考](https://s.weibo.com//weibo?q=%23%E5%8F%8C%E5%87%8F%E5%90%8E%E7%9A%84%E7%AC%AC%E4%B8%80%E4%B8%AA%E6%9C%9F%E6%9C%AB%E8%80%83%23&Refer=top) 191378
-31. [女儿拿30多张奖状掏干爸爸私房钱](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%84%BF%E6%8B%BF30%E5%A4%9A%E5%BC%A0%E5%A5%96%E7%8A%B6%E6%8E%8F%E5%B9%B2%E7%88%B8%E7%88%B8%E7%A7%81%E6%88%BF%E9%92%B1%23&Refer=top) 170203
-32. [西安滞留人员离开西安政策公布](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%BB%9E%E7%95%99%E4%BA%BA%E5%91%98%E7%A6%BB%E5%BC%80%E8%A5%BF%E5%AE%89%E6%94%BF%E7%AD%96%E5%85%AC%E5%B8%83%23&Refer=top) 169547
-33. [立陶宛政府背信弃义遭到国内外普遍反对](https://s.weibo.com//weibo?q=%23%E7%AB%8B%E9%99%B6%E5%AE%9B%E6%94%BF%E5%BA%9C%E8%83%8C%E4%BF%A1%E5%BC%83%E4%B9%89%E9%81%AD%E5%88%B0%E5%9B%BD%E5%86%85%E5%A4%96%E6%99%AE%E9%81%8D%E5%8F%8D%E5%AF%B9%23&Refer=top) 168234
-34. [这是我人生中笑得最惨的一次](https://s.weibo.com//weibo?q=%E8%BF%99%E6%98%AF%E6%88%91%E4%BA%BA%E7%94%9F%E4%B8%AD%E7%AC%91%E5%BE%97%E6%9C%80%E6%83%A8%E7%9A%84%E4%B8%80%E6%AC%A1&Refer=top) 164890
-35. [90后小伙2年拍摄60种秘境鲜花](https://s.weibo.com//weibo?q=%2390%E5%90%8E%E5%B0%8F%E4%BC%992%E5%B9%B4%E6%8B%8D%E6%91%8460%E7%A7%8D%E7%A7%98%E5%A2%83%E9%B2%9C%E8%8A%B1%23&Refer=top) 163433
-36. [深圳宝安](https://s.weibo.com//weibo?q=%E6%B7%B1%E5%9C%B3%E5%AE%9D%E5%AE%89&Refer=top) 160336
-37. [我妈偶像和我的偶像同框了](https://s.weibo.com//weibo?q=%23%E6%88%91%E5%A6%88%E5%81%B6%E5%83%8F%E5%92%8C%E6%88%91%E7%9A%84%E5%81%B6%E5%83%8F%E5%90%8C%E6%A1%86%E4%BA%86%23&Refer=top) 160089
-38. [被陌生人的善良整破防了](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E9%99%8C%E7%94%9F%E4%BA%BA%E7%9A%84%E5%96%84%E8%89%AF%E6%95%B4%E7%A0%B4%E9%98%B2%E4%BA%86%23&Refer=top) 156089
-39. [深圳沃尔玛](https://s.weibo.com//weibo?q=%E6%B7%B1%E5%9C%B3%E6%B2%83%E5%B0%94%E7%8E%9B&Refer=top) 154154
-40. [天津全员核酸已检出77例阳性](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E5%85%A8%E5%91%98%E6%A0%B8%E9%85%B8%E5%B7%B2%E6%A3%80%E5%87%BA77%E4%BE%8B%E9%98%B3%E6%80%A7%23&Refer=top) 150604
-41. [打羽毛球被偷后场报警](https://s.weibo.com//weibo?q=%23%E6%89%93%E7%BE%BD%E6%AF%9B%E7%90%83%E8%A2%AB%E5%81%B7%E5%90%8E%E5%9C%BA%E6%8A%A5%E8%AD%A6%23&Refer=top) 142848
-42. [3人居家20天喝400瓶啤酒](https://s.weibo.com//weibo?q=%233%E4%BA%BA%E5%B1%85%E5%AE%B620%E5%A4%A9%E5%96%9D400%E7%93%B6%E5%95%A4%E9%85%92%23&Refer=top) 138221
-43. [陕西各高校是否放寒假还在等通知](https://s.weibo.com//weibo?q=%23%E9%99%95%E8%A5%BF%E5%90%84%E9%AB%98%E6%A0%A1%E6%98%AF%E5%90%A6%E6%94%BE%E5%AF%92%E5%81%87%E8%BF%98%E5%9C%A8%E7%AD%89%E9%80%9A%E7%9F%A5%23&Refer=top) 124570
-44. [见过长得最成熟的猫咪](https://s.weibo.com//weibo?q=%23%E8%A7%81%E8%BF%87%E9%95%BF%E5%BE%97%E6%9C%80%E6%88%90%E7%86%9F%E7%9A%84%E7%8C%AB%E5%92%AA%23&Refer=top) 111984
-45. [邓佳鑫晒最佳主持获奖证书](https://s.weibo.com//weibo?q=%E9%82%93%E4%BD%B3%E9%91%AB%E6%99%92%E6%9C%80%E4%BD%B3%E4%B8%BB%E6%8C%81%E8%8E%B7%E5%A5%96%E8%AF%81%E4%B9%A6&Refer=top) 71427
-46. [小朋友给核酸采样点执勤民警塞糖吃](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E6%9C%8B%E5%8F%8B%E7%BB%99%E6%A0%B8%E9%85%B8%E9%87%87%E6%A0%B7%E7%82%B9%E6%89%A7%E5%8B%A4%E6%B0%91%E8%AD%A6%E5%A1%9E%E7%B3%96%E5%90%83%23&Refer=top) 56892
-47. [防控疫情 天津在行动](https://s.weibo.com//weibo?q=%E9%98%B2%E6%8E%A7%E7%96%AB%E6%83%85%20%E5%A4%A9%E6%B4%A5%E5%9C%A8%E8%A1%8C%E5%8A%A8&Refer=top) 50589
-48. [美妆博主的年终总结](https://s.weibo.com//weibo?q=%23%E7%BE%8E%E5%A6%86%E5%8D%9A%E4%B8%BB%E7%9A%84%E5%B9%B4%E7%BB%88%E6%80%BB%E7%BB%93%23&Refer=top) 37063
-49. [全球135个国家和地区报告奥密克戎](https://s.weibo.com//weibo?q=%23%E5%85%A8%E7%90%83135%E4%B8%AA%E5%9B%BD%E5%AE%B6%E5%92%8C%E5%9C%B0%E5%8C%BA%E6%8A%A5%E5%91%8A%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%23&Refer=top) 36311
+29. [打羽毛球被偷后场报警](https://s.weibo.com//weibo?q=%23%E6%89%93%E7%BE%BD%E6%AF%9B%E7%90%83%E8%A2%AB%E5%81%B7%E5%90%8E%E5%9C%BA%E6%8A%A5%E8%AD%A6%23&Refer=top) 195206
+30. [深圳沃尔玛](https://s.weibo.com//weibo?q=%E6%B7%B1%E5%9C%B3%E6%B2%83%E5%B0%94%E7%8E%9B&Refer=top) 193012
+31. [旅游博主亵渎烈士墓案终审维持原判](https://s.weibo.com//weibo?q=%23%E6%97%85%E6%B8%B8%E5%8D%9A%E4%B8%BB%E4%BA%B5%E6%B8%8E%E7%83%88%E5%A3%AB%E5%A2%93%E6%A1%88%E7%BB%88%E5%AE%A1%E7%BB%B4%E6%8C%81%E5%8E%9F%E5%88%A4%23&Refer=top) 192060
+32. [双减后的第一个期末考](https://s.weibo.com//weibo?q=%23%E5%8F%8C%E5%87%8F%E5%90%8E%E7%9A%84%E7%AC%AC%E4%B8%80%E4%B8%AA%E6%9C%9F%E6%9C%AB%E8%80%83%23&Refer=top) 191378
+33. [女儿拿30多张奖状掏干爸爸私房钱](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%84%BF%E6%8B%BF30%E5%A4%9A%E5%BC%A0%E5%A5%96%E7%8A%B6%E6%8E%8F%E5%B9%B2%E7%88%B8%E7%88%B8%E7%A7%81%E6%88%BF%E9%92%B1%23&Refer=top) 170203
+34. [西安滞留人员离开西安政策公布](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%BB%9E%E7%95%99%E4%BA%BA%E5%91%98%E7%A6%BB%E5%BC%80%E8%A5%BF%E5%AE%89%E6%94%BF%E7%AD%96%E5%85%AC%E5%B8%83%23&Refer=top) 169547
+35. [立陶宛政府背信弃义遭到国内外普遍反对](https://s.weibo.com//weibo?q=%23%E7%AB%8B%E9%99%B6%E5%AE%9B%E6%94%BF%E5%BA%9C%E8%83%8C%E4%BF%A1%E5%BC%83%E4%B9%89%E9%81%AD%E5%88%B0%E5%9B%BD%E5%86%85%E5%A4%96%E6%99%AE%E9%81%8D%E5%8F%8D%E5%AF%B9%23&Refer=top) 168234
+36. [陕西各高校是否放寒假还在等通知](https://s.weibo.com//weibo?q=%23%E9%99%95%E8%A5%BF%E5%90%84%E9%AB%98%E6%A0%A1%E6%98%AF%E5%90%A6%E6%94%BE%E5%AF%92%E5%81%87%E8%BF%98%E5%9C%A8%E7%AD%89%E9%80%9A%E7%9F%A5%23&Refer=top) 166886
+37. [这是我人生中笑得最惨的一次](https://s.weibo.com//weibo?q=%E8%BF%99%E6%98%AF%E6%88%91%E4%BA%BA%E7%94%9F%E4%B8%AD%E7%AC%91%E5%BE%97%E6%9C%80%E6%83%A8%E7%9A%84%E4%B8%80%E6%AC%A1&Refer=top) 164890
+38. [90后小伙2年拍摄60种秘境鲜花](https://s.weibo.com//weibo?q=%2390%E5%90%8E%E5%B0%8F%E4%BC%992%E5%B9%B4%E6%8B%8D%E6%91%8460%E7%A7%8D%E7%A7%98%E5%A2%83%E9%B2%9C%E8%8A%B1%23&Refer=top) 163433
+39. [深圳宝安](https://s.weibo.com//weibo?q=%E6%B7%B1%E5%9C%B3%E5%AE%9D%E5%AE%89&Refer=top) 160336
+40. [我妈偶像和我的偶像同框了](https://s.weibo.com//weibo?q=%23%E6%88%91%E5%A6%88%E5%81%B6%E5%83%8F%E5%92%8C%E6%88%91%E7%9A%84%E5%81%B6%E5%83%8F%E5%90%8C%E6%A1%86%E4%BA%86%23&Refer=top) 160089
+41. [被陌生人的善良整破防了](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E9%99%8C%E7%94%9F%E4%BA%BA%E7%9A%84%E5%96%84%E8%89%AF%E6%95%B4%E7%A0%B4%E9%98%B2%E4%BA%86%23&Refer=top) 156089
+42. [天津全员核酸已检出77例阳性](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E5%85%A8%E5%91%98%E6%A0%B8%E9%85%B8%E5%B7%B2%E6%A3%80%E5%87%BA77%E4%BE%8B%E9%98%B3%E6%80%A7%23&Refer=top) 150604
+43. [3人居家20天喝400瓶啤酒](https://s.weibo.com//weibo?q=%233%E4%BA%BA%E5%B1%85%E5%AE%B620%E5%A4%A9%E5%96%9D400%E7%93%B6%E5%95%A4%E9%85%92%23&Refer=top) 138221
+44. [见过长得最成熟的猫咪](https://s.weibo.com//weibo?q=%23%E8%A7%81%E8%BF%87%E9%95%BF%E5%BE%97%E6%9C%80%E6%88%90%E7%86%9F%E7%9A%84%E7%8C%AB%E5%92%AA%23&Refer=top) 126673
+45. [作家陈岚](https://s.weibo.com//weibo?q=%E4%BD%9C%E5%AE%B6%E9%99%88%E5%B2%9A&Refer=top) 118898
+46. [小朋友给核酸采样点执勤民警塞糖吃](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E6%9C%8B%E5%8F%8B%E7%BB%99%E6%A0%B8%E9%85%B8%E9%87%87%E6%A0%B7%E7%82%B9%E6%89%A7%E5%8B%A4%E6%B0%91%E8%AD%A6%E5%A1%9E%E7%B3%96%E5%90%83%23&Refer=top) 83201
+47. [邓佳鑫晒最佳主持获奖证书](https://s.weibo.com//weibo?q=%E9%82%93%E4%BD%B3%E9%91%AB%E6%99%92%E6%9C%80%E4%BD%B3%E4%B8%BB%E6%8C%81%E8%8E%B7%E5%A5%96%E8%AF%81%E4%B9%A6&Refer=top) 82016
+48. [防控疫情 天津在行动](https://s.weibo.com//weibo?q=%E9%98%B2%E6%8E%A7%E7%96%AB%E6%83%85%20%E5%A4%A9%E6%B4%A5%E5%9C%A8%E8%A1%8C%E5%8A%A8&Refer=top) 61993
+49. [美妆博主的年终总结](https://s.weibo.com//weibo?q=%23%E7%BE%8E%E5%A6%86%E5%8D%9A%E4%B8%BB%E7%9A%84%E5%B9%B4%E7%BB%88%E6%80%BB%E7%BB%93%23&Refer=top) 37063
+50. [全球135个国家和地区报告奥密克戎](https://s.weibo.com//weibo?q=%23%E5%85%A8%E7%90%83135%E4%B8%AA%E5%9B%BD%E5%AE%B6%E5%92%8C%E5%9C%B0%E5%8C%BA%E6%8A%A5%E5%91%8A%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%23&Refer=top) 36311
